--- a/src/dashboard/Data/Browser/B4aObjectPickerDialog.scss
+++ b/src/dashboard/Data/Browser/B4aObjectPickerDialog.scss
@@ -21,7 +21,7 @@
 }
 
 .objectPickerDialogWrapperEmpty {
-  width: 30vw;
+  width: 40vw;
   position: relative;
   background-color: $white;
   padding: 1rem 2rem;
